add: common user detail modal component, user data table, vue logic.
- implement vue.js logic
- bind some API
- add common component

--- a/assets/app/css/app.common.css
+++ b/assets/app/css/app.common.css
@@ -7,3 +7,11 @@
 .m-header__bottom {
     height: auto !important;
 }
+body {
+    background-image: url(../../../assets/app/media/img/bg/bg-7.jpg)
+}
+
+#app {
+    height: 100%;
+    display: flex;
+}
