--- a/assets/app/css/app.common.css
+++ b/assets/app/css/app.common.css
@@ -32,3 +32,6 @@ body {
     cursor: pointer;
     padding: 5px 10px;
 }
+select.form-control:not([size]):not([multiple]) {
+    height: calc(2.95rem + 5px)
+}
